--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,20 @@ concurrency:
 
 jobs:
   backend:
-    name: Backend (PHP tests)
+    name: Backend (Composer + Pint)
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup PHP
-      - uses: shivammathur/setup-php@v2
+        uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
           extensions: mbstring, bcmath, intl, gd, zip
           coverage: none
+          tools: composer:v2
 
       - name: Cache Composer
         uses: actions/cache@v4
@@ -30,22 +32,39 @@ jobs:
           path: |
             vendor
             ~/.composer/cache
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
 
-      - name: Install dependencies
+      - name: Validate composer.json
+        run: composer validate --no-interaction --strict
+
+      - name: Install Composer dependencies
         run: composer install --no-interaction --no-progress --prefer-dist
 
-      - name: Laravel basic check
+      - name: Laravel sanity check
         run: |
-          php -v
-          php artisan --version || true
+          php artisan --version
+          php artisan about || true
+
+      - name: Pint (lint)
+        run: ./vendor/bin/pint --test
+
+      - name: Run tests (only if tests exist)
+        run: |
+          if [ -d "tests" ] && [ "$(find tests -type f | wc -l)" -gt 0 ]; then
+            php artisan test
+          else
+            echo "No tests found. Skipping."
+          fi
 
   frontend:
     name: Frontend (Vite build)
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -53,10 +72,10 @@ jobs:
           node-version: "20"
           cache: "npm"
 
-      - name: Install dependencies
+      - name: Install NPM dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build (Vite)
         run: npm run build
 
       - name: Upload build artifact
