--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,8 @@ name: Test Project
 
 on:
   pull_request:
-    branches: - main
+    branches:
+      - main
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -10,13 +11,23 @@ concurrency:
 
 jobs:
   test:
-    runs-on: ubuntu-lastest
-    container:
-      image: node:20
-    steps: 
-      - uses: actions/checkout@v3
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
+          cache: npm
+
+      - name: Install
+        run: npm ci
+
+      - name: Test
+        run: npm test --if-present
+
+      - name: Build
+        run: npm run build
