--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
           tools: composer:v2
@@ -29,17 +29,26 @@ jobs:
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
+      - name: Cache Composer vendor
+        uses: actions/cache@v4
+        with:
+          path: vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('composer.lock') }}
+
       - name: Install PHP dependencies
         run: composer install --no-interaction --no-progress --prefer-dist
 
       - name: Install Node dependencies
         run: npm ci
 
-      - name: Build frontend assets (Vite)
+      - name: Build frontend assets
         run: npm run build
 
       - name: Generate key
         run: php artisan key:generate
+
+      - name: Clear cached config/routes
+        run: php artisan config:clear && php artisan route:clear
 
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
