--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,30 +37,52 @@ jobs:
       - name: Build assets
         run: npm run build
 
-      - name: Prepare SSH
+      - name: Prepare SSH (debug)
         run: |
           set -e
-          test -n "${{ secrets.SSH_HOST }}" || (echo "Missing secret: SSH_HOST" && exit 1)
-          test -n "${{ secrets.SSH_USER }}" || (echo "Missing secret: SSH_USER" && exit 1)
-          test -n "${{ secrets.SSH_PORT }}" || (echo "Missing secret: SSH_PORT" && exit 1)
-          test -n "${{ secrets.DEPLOY_PATH }}" || (echo "Missing secret: DEPLOY_PATH" && exit 1)
-          test -n "${{ secrets.SSH_PRIVATE_KEY }}" || (echo "Missing secret: SSH_PRIVATE_KEY" && exit 1)
 
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_ed25519
+
+          # Write private key safely (echo can break formatting)
+          printf "%s" "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
 
-          # known_hosts
+          echo "Testing DNS + port reachability..."
+          # Check DNS resolution (won’t print host)
+          getent hosts "${{ secrets.SSH_HOST }}" >/dev/null || { echo "ERROR: SSH_HOST cannot be resolved (DNS)"; exit 1; }
+
+          # Check TCP port reachability (won’t print host)
+          timeout 10 bash -lc "cat < /dev/null > /dev/tcp/${{ secrets.SSH_HOST }}/${{ secrets.SSH_PORT }}" \
+            && echo "Port reachable" \
+            || { echo "ERROR: Cannot reach SSH port (blocked, wrong host, wrong port, or SSH not enabled)"; exit 1; }
+
+          echo "Adding host key..."
           if [ -n "${{ secrets.SSH_KNOWN_HOSTS }}" ]; then
-            echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
+            printf "%s\n" "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           else
-            ssh-keyscan -p "${{ secrets.SSH_PORT }}" "${{ secrets.SSH_HOST }}" >> ~/.ssh/known_hosts
+            ssh-keyscan -T 10 -p "${{ secrets.SSH_PORT }}" "${{ secrets.SSH_HOST }}" 2>keyscan.err >> ~/.ssh/known_hosts || true
+            if [ ! -s ~/.ssh/known_hosts ]; then
+              echo "ERROR: ssh-keyscan failed:"
+              cat keyscan.err
+              exit 1
+            fi
           fi
 
-          # test connection (no deploy yet)
-          ssh -p "${{ secrets.SSH_PORT }}" -o BatchMode=yes -o StrictHostKeyChecking=yes \
-            "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" "echo 'SSH OK'"
+          echo "Testing SSH authentication..."
+          ssh -vvv -p "${{ secrets.SSH_PORT }}" \
+            -o BatchMode=yes \
+            -o StrictHostKeyChecking=yes \
+            "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" "echo SSH_OK" 2>ssh.err || true
+
+          if grep -q "SSH_OK" ssh.err; then
+            echo "SSH OK"
+            exit 0
+          fi
+
+          echo "ERROR: SSH failed. Details:"
+          tail -n 80 ssh.err
+          exit 1
 
       - name: Deploy via rsync
         run: |
