--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Humaneti SaaS public subscription gateway
+HUMANETI_SASS_API_URL=http://127.0.0.1:8000
+HUMANETI_SASS_SUBSCRIPTION_PUBLIC_TOKEN=
+HUMANETI_SASS_HTTP_TIMEOUT=15
