--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "8.2.29"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
